[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data_etl"
version = '0.1.0'
authors = [
    {name = "Francisco Javier Alonso Rubio", email = "fjalorub@gmail.com"},
]
description = "Python-only framework to easily build ETLs."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["data", "etl", "python", "parallelism"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
include = ["data_etl*"]
exclude = ["tests*"]

[project.optional-dependencies]
api = []
full = []
