[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cupyd"
version = "0.2.0"
dependencies = []
requires-python = ">=3.9"
description = "Python framework to easily build ETLs."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Francisco Javier Alonso Rubio", email = "fjalorub@gmail.com" },
]
keywords = [
    "python", "data", "etl", "parallelism", "multiprocessing", "framework", "concurrency",
    "threading"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Development Status :: 3 - Alpha",
]

[project.optional-dependencies]
docs = ["mkdocs-material"]

[project.urls]
Repository = "https://github.com/jalorub/cupyd.git"

[tool.setuptools.packages.find]
include = ["cupyd*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.flake8]
max-line-length = 100
exclude = [".git", ".github", "__pycache__", "*venv*", "*.venv*"]

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
